@@ -13,3 +13,7 @@ aclocal.m4
 ltmain.sh
 autom4te.cache
 gtk-doc.make
+typescript
+m4/*.m4
+*~
+
