@@ -1,0 +1,1 @@
+EXTRA_DISTS= libtool.m4 lt~obsolete.m4 ltoptions.m4 ltsugar.m4 ltversion.m4
