@@ -1,1 +1,2 @@
 opt/syslog-ng/lib/*.s[o,l]*
+opt/syslog-ng/lib/*.a
